Updates visible em style and fixes wording changes.

--- a/myuw/static/css/components.less
+++ b/myuw/static/css/components.less
@@ -87,6 +87,8 @@
     /*** card section content ***/
     .myuw-card-row-content {
         margin-bottom: 8px;
+
+        em { font-weight: bold; color: #555; }
     }
 
     /*** card item list ***/
